# fastapi-wtr-app-new

./: .env.example  .gitignore  Dockerfile  Makefile  Makefile_old  README.md  README.rst  codigo-lab.ipynb  docker-compose.yml  mkdocs.yml  mkgendocs.yml  pyproject.toml  samconfig.toml  template.yaml
app/: app.py  requirements.txt
app/api/dependencies/: database.py
app/api/errors/: validation_error.py
app/api/routes/: api.py  quotes.py  tickers.py
app/core/settings/: app.py  development.py  test.py
app/core/utils/: stocks.py  utilities.py
app/core/utils/middleware/: brotli_middleware.py  brotli_responser.py
app/db/: errors.py  events.py
app/db/repositories/: profiles.py  ticker.py  users.py
app/models/domain/: ticker.py
app/models/schemas/: quotes.py  tickers.py
app/services/: jwt.py
docs_sphinx/: conf.py  index.rst  main.py
tests/: conftest.py
tests/test_api/test_errors/: test_422_error.py  test_error.py
tests/test_api/test_routes/: test_handlers.py  test_tickers.py
