[tool.poetry]
name = "fastapi-wtr-app"
version = "0.0.0"
description = "Backend logic implementation for https://github.com/gothinkster/realworld with awesome FastAPI"
authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
pydantic = { version = "^1.9", extras = ["email", "dotenv"] }
passlib = { version = "^1.7", extras = ["bcrypt"] }
pyjwt = "^2.3"
databases = "^0.5.5"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
aiosql = "^3.3.1"
pypika = "^0.48.8"
alembic = "^1.7"
python-slugify = "^5.0"
Unidecode = "^1.3"
loguru = "^0.6.0"
sklearn = "^0.0"
typing-extensions = "^4.1.1"
yfinance = "^0.1.70"
Brotli = "^1.0.9"
brotli-asgi = "^1.1.0"
mangum = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.0"
mypy = "^0.931"
flake8-fixme = "^1.1"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-asyncio = "^0.18.0"
pytest-env = "^0.6.2"
pytest-xdist = "^2.4.0"
httpx = "^0.22.0"
asgi-lifespan = "^1.0.1"
astpretty = "2.1.0"
pre-commit="2.13.0"  # pre-commit hooks in .git protocol
#black="21.5b1"  # linter
#flake8="3.9.2"  # PEP8 conventions
pep8-naming="0.11.1"  # variable naming conventions support for flake8
flake8-docstrings="1.6.0"  # enables flake8 Google-style docstring linting
mkdocs="1.1.2"  # static site generator for documentation in Markdown
mkdocs-material="7.1.5"  # Material support for MkDocs
mkdocs-minify-plugin="0.4.0"  # strips whitespaces in HTML markdown documentation pages
mkdocs-git-revision-date-localized-plugin="0.9.2"  # displays the date of the last git modification of a markdown page
mkdocs-git-authors-plugin="0.3.3"  # displays git authors of a markdown page
mkdocs-table-reader-plugin="0.5"  # enables automatic CSV imports as a table into a markdown page
mkdocs-img2fig-plugin="0.9.3"  # converts markdown encoded images to HTML figures
mknotebooks="0.7.0"  # enables inclusion of Jupyter notebook in markdown page
mkdocs-awesome-pages-plugin="2.5.0"  # enables naive configuration of page titles and their order
mkdocs-enumerate-headings-plugin="0.4.4"  # enumerates headings across markdown pages
mkdocs-print-site-plugin="1.2.3"  # allows visiters to File > Print > Save as PDF entire markdown documentation
mkgendocs="0.8.1"  # generate MkDocs pages from Google-style docstrings of Python functions
commitizen = "^2.23.0"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
  --numprocesses=auto
  --asyncio-mode=auto
'''
env = [
  "SECRET_KEY=secret",
  "MAX_CONNECTIONS_COUNT=1",
  "MIN_CONNECTIONS_COUNT=1"
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
